Moving elements exercise

--- a/app/design/frontend/Pixelpro/ThemePro/Magento_Theme/layout/default_head_blocks.xml
+++ b/app/design/frontend/Pixelpro/ThemePro/Magento_Theme/layout/default_head_blocks.xml
@@ -4,9 +4,8 @@
         <css src="style.css"/>
         <script src="js/script.js" />
         <css src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" src_type="url" />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" src_type="url"/>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" src_type="url"/>
+<!--        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" src_type="url"/>-->
+<!--        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" src_type="url"/>-->
         <link rel="stylesheet" type="text/css" src="https://fonts.googleapis.com/css?family=Roboto" src_type="url"/>
     </head>
 </page>
