--- a/app/design/frontend/Pixelpro/ThemePro/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Pixelpro/ThemePro/Magento_Theme/layout/default.xml
@@ -24,6 +24,7 @@
             <block class="Magento\Store\Block\Switcher" name="store_switcher" as="store_switcher" after="footer_links" template="Magento_Store::switch/stores.phtml"/>
         </referenceContainer>
         <container name="div.sidebar.additional" htmlTag="div" htmlClass="sidebar sidebar-additional" after="div.sidebar.main">
+            <block class="Magento\Framework\View\Element\Template" name="myview" template="Magento_Theme::myview.phtml" before="-"/>
             <container name="sidebar.additional" as="sidebar_additional" label="Sidebar Additional"/>
         </container>
         <referenceBlock name="report.bugs" remove="true"/>
