--- a/app/design/frontend/Pixelpro/ThemePro/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Pixelpro/ThemePro/Magento_Theme/layout/default.xml
@@ -23,9 +23,8 @@
         <referenceContainer name="footer">
             <block class="Magento\Store\Block\Switcher" name="store_switcher" as="store_switcher" after="footer_links" template="Magento_Store::switch/stores.phtml"/>
         </referenceContainer>
-        <container name="div.sidebar.additional" htmlTag="div" htmlClass="sidebar sidebar-additional" after="div.sidebar.main">
-            <block class="Magento\Framework\View\Element\Template" name="myview" template="Magento_Theme::myview.phtml" before="-"/>
-            <container name="sidebar.additional" as="sidebar_additional" label="Sidebar Additional"/>
+        <container name="some.container" as="someContainer" label="Some Container" htmlTag="div" htmlClass="some-container">
+            <block class="Magento\Framework\View\Element\Template" name="myblock" template="Magento_Theme::map.phtml"/>
         </container>
         <referenceBlock name="report.bugs" remove="true"/>
         <move element="copyright" destination="before.body.end"/>
