--- a/app/design/frontend/Pixelpro/TemplateMonster/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Pixelpro/TemplateMonster/Magento_Theme/layout/default.xml
@@ -8,5 +8,7 @@
 <page layout="3columns" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceBlock name="header.panel.wrapper" remove="true" />
+        <referenceBlock name="top.search" remove="true" />
+        <move element="header" destination="header-wrapper" before="minicart-wrapper" />
     </body>
 </page>
