--- a/app/design/frontend/Pixelpro/TemplateMonster/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Pixelpro/TemplateMonster/Magento_Theme/layout/default.xml
@@ -9,6 +9,20 @@
     <body>
         <referenceBlock name="header.panel.wrapper" remove="true" />
         <referenceBlock name="top.search" remove="true" />
+        <referenceBlock name="form.subscribe" remove="true"/>
+        <referenceContainer name="footer" label="Page Footer" htmlTag="div" htmlClass="footer content">
+            <block class="Magento\Framework\View\Element\Html\Links" name="footer_links_2">
+                <arguments>
+                    <argument name="css_class" xsi:type="string">footer links</argument>
+                </arguments>
+                <block class="Magento\Framework\View\Element\Html\Link\Current" name="privacy-policy-link">
+                    <arguments>
+                        <argument name="label" xsi:type="string" translate="true">Secure Shipping</argument>
+                        <argument name="path" xsi:type="string">#</argument>
+                    </arguments>
+                </block>
+            </block>
+        </referenceContainer>
         <move element="header" destination="header-wrapper" before="minicart-wrapper" />
     </body>
 </page>
